[package]
name = "mdp_brkga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
optimum = { git = "https://github.com/dbofmmbt/optimum", branch = "main" }
ordered-float = "2.8.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
